--- a/app/global.css
+++ b/app/global.css
@@ -17,3 +17,21 @@
     overflow: hidden;
   }
 }
+
+
+
+@keyframes marquee {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+
+.marquee {
+  display: inline-block;
+  white-space: nowrap;
+  animation: marquee 10s linear infinite;
+}
